package org.example;

public class Course {//ders sinifi
    private Student[]//bir derse kayitli ogrenciler
    classList;//bir dizi olarak tutuluyor
    private Faculty faculty;//derslerin ogretim uyesi(Faculty),
    //bu faculty degiskeninde saklanir

    public void addStudent(Student s){
        //bir Student classList dizisine eklemek icin
        //kullanilacak henüz yazilmadi
    }
    public void setFaculty(Faculty faculty){
        //derse ogretim uyesi atamak icin kullanilir
    }
}
