package org.example;

public class Faculty {//ogretim uyesi
    private Course[]//Öğretim üyesinin verdiği dersler (Course)
    couseList;// bir dizi olarak tutuluyor

    public void addCourse(Course c){
        //bir öğretim üyesine ders eklemek için
        //bu kısım henuz doldurulmadi
    }
}
