package org.example;

public class Student {//ogrenci sinifi
    private Course[]//ogrencinin aldigi dersler
    courseList;// array olarak tutuluyor

    public void addCourse(Course s){
        //ogrenciye yeni ders eklemek icin
        //islevler henuz yazilmamis

    }
}
